--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,61 @@
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.traffic-light-container {
+    text-align: center;
+    position: relative;
+  }
+  
+  .pole {
+    width: 10px;
+    height: 50px;
+    background: #555;
+    margin: 0 auto;
+  }
+  
+  .traffic-light {
+    width: 100px;
+    padding: 20px;
+    background: #333;
+    border-radius: 10px;
+    margin: auto;
+  }
+  
+  .light {
+    width: 60px;
+    height: 60px;
+    margin: 10px auto;
+    border-radius: 50%;
+    transition: box-shadow 0.3s;
+  }
+  
+  /* Colores base */
+  .light.red {
+    background: red;
+  }
+  
+  .light.yellow {
+    background: yellow;
+  }
+  
+  .light.green {
+    background: green;
+  }
+  
+  .light.purple {
+    background: purple;
+  }
+  
+  .light.red.active {
+    box-shadow: 0 0 20px 5px red;
+  }
+  
+  .light.yellow.active {
+    box-shadow: 0 0 20px 5px yellow;
+  }
+  
+  .light.green.active {
+    box-shadow: 0 0 20px 5px green;
+  }
+  
+  .light.purple.active {
+    box-shadow: 0 0 20px 5px purple;
+  }
+  
